--- a/src/biocloud/settings/local.sample.env
+++ b/src/biocloud/settings/local.sample.env
@@ -13,3 +13,4 @@ DATABASE_URL=sqlite:///db.sqlite3
 # Command to create a new secret key:
 # $ python -c 'import random; import string; print("".join([random.SystemRandom().choice(string.digits + string.ascii_letters + string.punctuation) for i in range(100)]))'
 SECRET_KEY={{ secret_key }}
+BIOCLOUD_DATA_SOURCES_DIR=./data_sources
