--- a/src/biocloud/settings/local.sample.env
+++ b/src/biocloud/settings/local.sample.env
@@ -14,3 +14,13 @@ DATABASE_URL=sqlite:///db.sqlite3
 # $ python -c 'import random; import string; print("".join([random.SystemRandom().choice(string.digits + string.ascii_letters + string.punctuation) for i in range(100)]))'
 SECRET_KEY={{ secret_key }}
 BIOCLOUD_DATA_SOURCES_DIR=./data_sources
+
+# Email SMTP server settings (for deployment only)
+EMAIL_HOST=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_PORT=465
+EMAIL_USE_SSL=True
+EMAIL_USE_TLS=False
+EMAIL_SENDER_NAME=BioCloud Dev
+EMAIL_SENDER_ADDRESS=registration@biocloud.tw
