Add simplified report view

--- a/src/biocloud/settings/local.sample.env
+++ b/src/biocloud/settings/local.sample.env
@@ -14,6 +14,7 @@ DATABASE_URL=sqlite:///db.sqlite3
 # $ python -c 'import random; import string; print("".join([random.SystemRandom().choice(string.digits + string.ascii_letters + string.punctuation) for i in range(100)]))'
 SECRET_KEY={{ secret_key }}
 BIOCLOUD_DATA_SOURCES_DIR=./data_sources
+BIOCLOUD_REPORT_DIR=./reports
 
 # Email SMTP server settings (for deployment only)
 EMAIL_HOST=
