--- a/src/biocloud/settings/local.sample.env
+++ b/src/biocloud/settings/local.sample.env
@@ -15,6 +15,7 @@ DATABASE_URL=sqlite:///db.sqlite3
 SECRET_KEY={{ secret_key }}
 BIOCLOUD_DATA_SOURCES_DIR=./data_sources
 BIOCLOUD_REPORTS_DIR=./reports
+BIOCLOUD_RESULTS_DIR=./results
 
 # Email SMTP server settings (for deployment only)
 EMAIL_HOST=
