Connect genome reference to a specific directory

--- a/src/biocloud/settings/local.sample.env
+++ b/src/biocloud/settings/local.sample.env
@@ -13,6 +13,7 @@ DATABASE_URL=sqlite:///db.sqlite3
 # Command to create a new secret key:
 # $ python -c 'import random; import string; print("".join([random.SystemRandom().choice(string.digits + string.ascii_letters + string.punctuation) for i in range(100)]))'
 SECRET_KEY={{ secret_key }}
+BIOCLOUD_REFERENCES_DIR=./references
 BIOCLOUD_DATA_SOURCES_DIR=./data_sources
 BIOCLOUD_REPORTS_DIR=./reports
 BIOCLOUD_RESULTS_DIR=./results
